--- a/index.html
+++ b/index.html
@@ -623,15 +623,15 @@
     <div class="PinkSeperator mb-3 my-4 NoAnim">
         <div class="container-fluid">
             <div class="row gx-2">
-                <div class="col-md-4 col-3 PinkLine">
+                <div class="col-md-4 d-md-inline-block d-none PinkLine">
                 </div>
-                <div class="col-md-2 col-4 PinkSectionTitle">
+                <div class="col-md-2 col-6 PinkSectionTitle text-start text-md-center">
                     تسوق حسب الفئة
                 </div>
-                <div class="col-md-4 col-2 PinkLine">
+                <div class="col-md-4 d-md-inline-block d-none PinkLine">
                 </div>
-                <div class="col-md-1 col-2 ShowAll">
-                    <a href="category.html">عرض الكل <i class="fa-solid fa-chevron-left"></i></a>
+                <div class="col-md-1 col-6  ShowAll">
+                    <a href="category.html" class="float-end">عرض الكل <i class="fa-solid fa-chevron-left"></i></a>
                 </div>
             </div>
         </div>
@@ -873,15 +873,15 @@
         <div class="container-fluid">
 
             <div class="row gx-2">
-                <div class="col-md-4 col-3 PinkLine">
+      <div class="col-md-4 d-md-inline-block d-none PinkLine">
                 </div>
-                <div class="col-md-2 col-4 PinkSectionTitle">
+                <div class="col-md-2 col-6 PinkSectionTitle text-start text-md-center">
                     العناية بالبشرة
                 </div>
-                <div class="col-md-4 col-2 PinkLine">
+                <div class="col-md-4 d-md-inline-block d-none PinkLine">
                 </div>
-                <div class="col-md-1 col-2 ShowAll">
-                    <a href="category.html">عرض الكل <i class="fa-solid fa-chevron-left"></i></a>
+                <div class="col-md-1 col-6  ShowAll">
+                    <a href="category.html" class="float-end">عرض الكل <i class="fa-solid fa-chevron-left"></i></a>
                 </div>
             </div>
         </div>
@@ -1547,15 +1547,15 @@
         <div class="container-fluid">
 
             <div class="row gx-2">
-                <div class="col-md-4 col-3 PinkLine">
+      <div class="col-md-4 d-md-inline-block d-none PinkLine">
                 </div>
-                <div class="col-md-2 col-4 PinkSectionTitle">
+                <div class="col-md-2 col-6 PinkSectionTitle text-start text-md-center">
                     العناية بالشعر
                 </div>
-                <div class="col-md-4 col-2 PinkLine">
+                <div class="col-md-4 d-md-inline-block d-none PinkLine">
                 </div>
-                <div class="col-md-1 col-2 ShowAll">
-                    <a href="category.html">عرض الكل <i class="fa-solid fa-chevron-left"></i></a>
+                <div class="col-md-1 col-6  ShowAll">
+                    <a href="category.html" class="float-end">عرض الكل <i class="fa-solid fa-chevron-left"></i></a>
                 </div>
             </div>
         </div>
@@ -2264,15 +2264,15 @@
         <div class="container-fluid">
 
             <div class="row gx-2">
-                <div class="col-md-4 col-3 PinkLine">
+      <div class="col-md-4 d-md-inline-block d-none PinkLine">
                 </div>
-                <div class="col-md-2 col-4 PinkSectionTitle">
+                <div class="col-md-2 col-6 PinkSectionTitle text-start text-md-center">
                     الماركات
                 </div>
-                <div class="col-md-4 col-2 PinkLine">
+                <div class="col-md-4 d-md-inline-block d-none PinkLine">
                 </div>
-                <div class="col-md-1 col-2 ShowAll">
-                    <a href="category.html">عرض الكل <i class="fa-solid fa-chevron-left"></i></a>
+                <div class="col-md-1 col-6  ShowAll">
+                    <a href="category.html" class="float-end">عرض الكل <i class="fa-solid fa-chevron-left"></i></a>
                 </div>
             </div>
         </div>
@@ -2513,15 +2513,15 @@
         <div class="container-fluid">
 
             <div class="row gx-2">
-                <div class="col-md-4 col-3 PinkLine">
+      <div class="col-md-4 d-md-inline-block d-none PinkLine">
                 </div>
-                <div class="col-md-2 col-4 PinkSectionTitle">
+                <div class="col-md-2 col-6 PinkSectionTitle text-start text-md-center">
                     المكياج
                 </div>
-                <div class="col-md-4 col-2 PinkLine">
+                <div class="col-md-4 d-md-inline-block d-none PinkLine">
                 </div>
-                <div class="col-md-1 col-2 ShowAll">
-                    <a href="category.html">عرض الكل <i class="fa-solid fa-chevron-left"></i></a>
+                <div class="col-md-1 col-6  ShowAll">
+                    <a href="category.html" class="float-end">عرض الكل <i class="fa-solid fa-chevron-left"></i></a>
                 </div>
             </div>
         </div>
@@ -3216,15 +3216,15 @@
         <div class="container-fluid">
 
             <div class="row gx-2">
-                <div class="col-md-4 col-3 PinkLine">
+      <div class="col-md-4 d-md-inline-block d-none PinkLine">
                 </div>
-                <div class="col-md-2 col-4 PinkSectionTitle">
+                <div class="col-md-2 col-6 PinkSectionTitle text-start text-md-center">
                     الأجهزة
                 </div>
-                <div class="col-md-4 col-2 PinkLine">
+                <div class="col-md-4 d-md-inline-block d-none PinkLine">
                 </div>
-                <div class="col-md-1 col-2 ShowAll">
-                    <a href="category.html">عرض الكل <i class="fa-solid fa-chevron-left"></i></a>
+                <div class="col-md-1 col-6  ShowAll">
+                    <a href="category.html" class="float-end">عرض الكل <i class="fa-solid fa-chevron-left"></i></a>
                 </div>
             </div>
         </div>
@@ -3931,9 +3931,9 @@
         <div class="container-fluid">
 
             <div class="row gx-2">
-                <div class="col-md-4 col-3 PinkLine">
+      <div class="col-md-4 d-md-inline-block d-none PinkLine">
                 </div>
-                <div class="col-md-2 col-4 PinkSectionTitle">
+                <div class="col-md-2 col-6 PinkSectionTitle text-start text-md-center">
                     الأجهزة
                 </div>
                 <div class="col-md-4 col-1 PinkLine">
