--- a/product.html
+++ b/product.html
@@ -1584,7 +1584,7 @@
             </div>
         </div>
         <div class="youNeedHelp text-center">
-            <div class="blueLine py-md-3 py-2">
+            <div class="blueLine py-md-3 ">
                 <h5 class="mb-0">هل تحتاج المساعدة؟</h5>
             </div>
             <div class="FooterServices pt-3 pb-2">
