--- a/index.html
+++ b/index.html
@@ -631,7 +631,7 @@
                 <div class="col-md-4 d-md-inline-block d-none PinkLine">
                 </div>
                 <div class="col-md-1 col-6  ShowAll">
-                    <a href="category.html" class="float-end">عرض الكل <i class="fa-solid fa-chevron-left"></i></a>
+                    <a href="category.html" class="float-end mt-2 mt-md-0">عرض الكل <i class="fa-solid fa-chevron-left"></i></a>
                 </div>
             </div>
         </div>
@@ -881,7 +881,7 @@
                 <div class="col-md-4 d-md-inline-block d-none PinkLine">
                 </div>
                 <div class="col-md-1 col-6  ShowAll">
-                    <a href="category.html" class="float-end">عرض الكل <i class="fa-solid fa-chevron-left"></i></a>
+                    <a href="category.html" class="float-end mt-2 mt-md-0">عرض الكل <i class="fa-solid fa-chevron-left"></i></a>
                 </div>
             </div>
         </div>
@@ -1555,7 +1555,7 @@
                 <div class="col-md-4 d-md-inline-block d-none PinkLine">
                 </div>
                 <div class="col-md-1 col-6  ShowAll">
-                    <a href="category.html" class="float-end">عرض الكل <i class="fa-solid fa-chevron-left"></i></a>
+                    <a href="category.html" class="float-end mt-2 mt-md-0">عرض الكل <i class="fa-solid fa-chevron-left"></i></a>
                 </div>
             </div>
         </div>
@@ -2272,7 +2272,7 @@
                 <div class="col-md-4 d-md-inline-block d-none PinkLine">
                 </div>
                 <div class="col-md-1 col-6  ShowAll">
-                    <a href="category.html" class="float-end">عرض الكل <i class="fa-solid fa-chevron-left"></i></a>
+                    <a href="category.html" class="float-end mt-2 mt-md-0">عرض الكل <i class="fa-solid fa-chevron-left"></i></a>
                 </div>
             </div>
         </div>
@@ -2521,7 +2521,7 @@
                 <div class="col-md-4 d-md-inline-block d-none PinkLine">
                 </div>
                 <div class="col-md-1 col-6  ShowAll">
-                    <a href="category.html" class="float-end">عرض الكل <i class="fa-solid fa-chevron-left"></i></a>
+                    <a href="category.html" class="float-end mt-2 mt-md-0">عرض الكل <i class="fa-solid fa-chevron-left"></i></a>
                 </div>
             </div>
         </div>
@@ -3224,7 +3224,7 @@
                 <div class="col-md-4 d-md-inline-block d-none PinkLine">
                 </div>
                 <div class="col-md-1 col-6  ShowAll">
-                    <a href="category.html" class="float-end">عرض الكل <i class="fa-solid fa-chevron-left"></i></a>
+                    <a href="category.html" class="float-end mt-2 mt-md-0">عرض الكل <i class="fa-solid fa-chevron-left"></i></a>
                 </div>
             </div>
         </div>
@@ -3939,7 +3939,7 @@
                 <div class="col-md-4 col-1 PinkLine">
                 </div>
                 <div class="col-md-1 col-2 ShowAll">
-                    <a href="category.html">عرض الكل <i class="fa-solid fa-chevron-left"></i></a>
+                    <a href="category.html mt-2 mt-md-0">عرض الكل <i class="fa-solid fa-chevron-left"></i></a>
                 </div>
             </div>
         </div>
@@ -4635,7 +4635,7 @@
             </div>
         </div>
         <div class="youNeedHelp text-center">
-            <div class="blueLine py-md-3 py-2">
+            <div class="blueLine py-md-3 ">
                 <h5 class="mb-0">هل تحتاج المساعدة؟</h5>
             </div>
             <div class="FooterServices pt-3 pb-2">
