--- a/index.html
+++ b/index.html
@@ -631,7 +631,8 @@
                 <div class="col-md-4 d-md-inline-block d-none PinkLine">
                 </div>
                 <div class="col-md-1 col-6  ShowAll">
-                    <a href="category.html" class="float-end mt-1 mt-md-0">عرض الكل <i class="fa-solid fa-chevron-left"></i></a>
+                    <a href="category.html" class="float-end mt-1 mt-md-0">عرض الكل <i
+                            class="fa-solid fa-chevron-left"></i></a>
                 </div>
             </div>
         </div>
@@ -873,7 +874,7 @@
         <div class="container-fluid">
 
             <div class="row gx-2">
-      <div class="col-md-4 d-md-inline-block d-none PinkLine">
+                <div class="col-md-4 d-md-inline-block d-none PinkLine">
                 </div>
                 <div class="col-md-2 col-6 PinkSectionTitle text-start text-md-center">
                     العناية بالبشرة
@@ -881,7 +882,8 @@
                 <div class="col-md-4 d-md-inline-block d-none PinkLine">
                 </div>
                 <div class="col-md-1 col-6  ShowAll">
-                    <a href="category.html" class="float-end mt-1 mt-md-0">عرض الكل <i class="fa-solid fa-chevron-left"></i></a>
+                    <a href="category.html" class="float-end mt-1 mt-md-0">عرض الكل <i
+                            class="fa-solid fa-chevron-left"></i></a>
                 </div>
             </div>
         </div>
@@ -1547,7 +1549,7 @@
         <div class="container-fluid">
 
             <div class="row gx-2">
-      <div class="col-md-4 d-md-inline-block d-none PinkLine">
+                <div class="col-md-4 d-md-inline-block d-none PinkLine">
                 </div>
                 <div class="col-md-2 col-6 PinkSectionTitle text-start text-md-center">
                     العناية بالشعر
@@ -1555,7 +1557,8 @@
                 <div class="col-md-4 d-md-inline-block d-none PinkLine">
                 </div>
                 <div class="col-md-1 col-6  ShowAll">
-                    <a href="category.html" class="float-end mt-1 mt-md-0">عرض الكل <i class="fa-solid fa-chevron-left"></i></a>
+                    <a href="category.html" class="float-end mt-1 mt-md-0">عرض الكل <i
+                            class="fa-solid fa-chevron-left"></i></a>
                 </div>
             </div>
         </div>
@@ -2264,7 +2267,7 @@
         <div class="container-fluid">
 
             <div class="row gx-2">
-      <div class="col-md-4 d-md-inline-block d-none PinkLine">
+                <div class="col-md-4 d-md-inline-block d-none PinkLine">
                 </div>
                 <div class="col-md-2 col-6 PinkSectionTitle text-start text-md-center">
                     الماركات
@@ -2272,7 +2275,8 @@
                 <div class="col-md-4 d-md-inline-block d-none PinkLine">
                 </div>
                 <div class="col-md-1 col-6  ShowAll">
-                    <a href="category.html" class="float-end mt-1 mt-md-0">عرض الكل <i class="fa-solid fa-chevron-left"></i></a>
+                    <a href="category.html" class="float-end mt-1 mt-md-0">عرض الكل <i
+                            class="fa-solid fa-chevron-left"></i></a>
                 </div>
             </div>
         </div>
@@ -2513,7 +2517,7 @@
         <div class="container-fluid">
 
             <div class="row gx-2">
-      <div class="col-md-4 d-md-inline-block d-none PinkLine">
+                <div class="col-md-4 d-md-inline-block d-none PinkLine">
                 </div>
                 <div class="col-md-2 col-6 PinkSectionTitle text-start text-md-center">
                     المكياج
@@ -2521,7 +2525,8 @@
                 <div class="col-md-4 d-md-inline-block d-none PinkLine">
                 </div>
                 <div class="col-md-1 col-6  ShowAll">
-                    <a href="category.html" class="float-end mt-1 mt-md-0">عرض الكل <i class="fa-solid fa-chevron-left"></i></a>
+                    <a href="category.html" class="float-end mt-1 mt-md-0">عرض الكل <i
+                            class="fa-solid fa-chevron-left"></i></a>
                 </div>
             </div>
         </div>
@@ -3216,7 +3221,7 @@
         <div class="container-fluid">
 
             <div class="row gx-2">
-      <div class="col-md-4 d-md-inline-block d-none PinkLine">
+                <div class="col-md-4 d-md-inline-block d-none PinkLine">
                 </div>
                 <div class="col-md-2 col-6 PinkSectionTitle text-start text-md-center">
                     الأجهزة
@@ -3224,7 +3229,8 @@
                 <div class="col-md-4 d-md-inline-block d-none PinkLine">
                 </div>
                 <div class="col-md-1 col-6  ShowAll">
-                    <a href="category.html" class="float-end mt-1 mt-md-0">عرض الكل <i class="fa-solid fa-chevron-left"></i></a>
+                    <a href="category.html" class="float-end mt-1 mt-md-0">عرض الكل <i
+                            class="fa-solid fa-chevron-left"></i></a>
                 </div>
             </div>
         </div>
@@ -3931,15 +3937,16 @@
         <div class="container-fluid">
 
             <div class="row gx-2">
-      <div class="col-md-4 d-md-inline-block d-none PinkLine">
+                <div class="col-md-4 d-md-inline-block d-none PinkLine">
                 </div>
                 <div class="col-md-2 col-6 PinkSectionTitle text-start text-md-center">
                     الأجهزة
                 </div>
-                <div class="col-md-4 col-1 PinkLine">
+                <div class="col-md-4 d-md-inline-block d-none PinkLine">
                 </div>
-                <div class="col-md-1 col-2 ShowAll">
-                    <a href="category.html mt-1 mt-md-0">عرض الكل <i class="fa-solid fa-chevron-left"></i></a>
+                <div class="col-md-1 col-6 ShowAll">
+                    <a href="category.html mt-1 mt-md-0" class="float-end">عرض الكل <i
+                            class="fa-solid fa-chevron-left"></i></a>
                 </div>
             </div>
         </div>
