--- a/index.html
+++ b/index.html
@@ -631,7 +631,7 @@
                 <div class="col-md-4 d-md-inline-block d-none PinkLine">
                 </div>
                 <div class="col-md-1 col-6  ShowAll">
-                    <a href="category.html" class="float-end mt-1 mt-md-0">عرض الكل <i
+                    <a href="category.html" class="float-end">عرض الكل <i
                             class="fa-solid fa-chevron-left"></i></a>
                 </div>
             </div>
@@ -882,7 +882,7 @@
                 <div class="col-md-4 d-md-inline-block d-none PinkLine">
                 </div>
                 <div class="col-md-1 col-6  ShowAll">
-                    <a href="category.html" class="float-end mt-1 mt-md-0">عرض الكل <i
+                    <a href="category.html" class="float-end">عرض الكل <i
                             class="fa-solid fa-chevron-left"></i></a>
                 </div>
             </div>
@@ -1557,7 +1557,7 @@
                 <div class="col-md-4 d-md-inline-block d-none PinkLine">
                 </div>
                 <div class="col-md-1 col-6  ShowAll">
-                    <a href="category.html" class="float-end mt-1 mt-md-0">عرض الكل <i
+                    <a href="category.html" class="float-end">عرض الكل <i
                             class="fa-solid fa-chevron-left"></i></a>
                 </div>
             </div>
@@ -2275,7 +2275,7 @@
                 <div class="col-md-4 d-md-inline-block d-none PinkLine">
                 </div>
                 <div class="col-md-1 col-6  ShowAll">
-                    <a href="category.html" class="float-end mt-1 mt-md-0">عرض الكل <i
+                    <a href="category.html" class="float-end">عرض الكل <i
                             class="fa-solid fa-chevron-left"></i></a>
                 </div>
             </div>
@@ -2525,7 +2525,7 @@
                 <div class="col-md-4 d-md-inline-block d-none PinkLine">
                 </div>
                 <div class="col-md-1 col-6  ShowAll">
-                    <a href="category.html" class="float-end mt-1 mt-md-0">عرض الكل <i
+                    <a href="category.html" class="float-end">عرض الكل <i
                             class="fa-solid fa-chevron-left"></i></a>
                 </div>
             </div>
@@ -3229,7 +3229,7 @@
                 <div class="col-md-4 d-md-inline-block d-none PinkLine">
                 </div>
                 <div class="col-md-1 col-6  ShowAll">
-                    <a href="category.html" class="float-end mt-1 mt-md-0">عرض الكل <i
+                    <a href="category.html" class="float-end">عرض الكل <i
                             class="fa-solid fa-chevron-left"></i></a>
                 </div>
             </div>
@@ -3945,7 +3945,7 @@
                 <div class="col-md-4 d-md-inline-block d-none PinkLine">
                 </div>
                 <div class="col-md-1 col-6 ShowAll">
-                    <a href="category.html mt-1 mt-md-0" class="float-end">عرض الكل <i
+                    <a href="category.html" class="float-end">عرض الكل <i
                             class="fa-solid fa-chevron-left"></i></a>
                 </div>
             </div>
