--- a/index.html
+++ b/index.html
@@ -649,7 +649,7 @@
                     <div class="carousel-item active">
                         <div class="row">
 
-                            <div class="card col-md-2 col-6 ">
+                            <div class="card col-md-2 col-3 ">
                                 <a href="Brand.html">
                                     <img src="images/rounded Image Carousel/brand1.jpg" class="card-img-top mx-auto "
                                         alt="...">
@@ -658,7 +658,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="card col-md-2 col-6">
+                            <div class="card col-md-2 col-3">
                                 <a href="Brand.html">
 
                                     <img src="images/rounded Image Carousel/brand2.jpg" class="card-img-top mx-auto"
@@ -668,7 +668,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="card col-md-2 d-md-inline-flex d-none">
+                            <div class="card col-md-2 col-3">
                                 <a href="Brand.html">
 
                                     <img src="images/rounded Image Carousel/brand3.png" class="card-img-top mx-auto"
@@ -678,7 +678,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="card col-md-2 d-md-inline-flex d-none">
+                            <div class="card col-md-2 col-3">
                                 <a href="Brand.html">
 
                                     <img src="images/rounded Image Carousel/1.png" class="card-img-top mx-auto"
@@ -703,7 +703,7 @@
                     <div class="carousel-item">
                         <div class="row">
 
-                            <div class="card col-md-2 col-6 ">
+                            <div class="card col-md-2 col-3 ">
                                 <a href="Brand.html">
                                     <img src="images/rounded Image Carousel/brand1.jpg" class="card-img-top mx-auto "
                                         alt="...">
@@ -712,7 +712,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="card col-md-2 col-6">
+                            <div class="card col-md-2 col-3">
                                 <a href="Brand.html">
 
                                     <img src="images/rounded Image Carousel/brand2.jpg" class="card-img-top mx-auto"
@@ -722,7 +722,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="card col-md-2 d-md-inline-flex d-none">
+                            <div class="card col-md-2 col-3">
                                 <a href="Brand.html">
 
                                     <img src="images/rounded Image Carousel/brand3.png" class="card-img-top mx-auto"
@@ -732,7 +732,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="card col-md-2 d-md-inline-flex d-none">
+                            <div class="card col-md-2 col-3">
                                 <a href="Brand.html">
 
                                     <img src="images/rounded Image Carousel/1.png" class="card-img-top mx-auto"
@@ -757,7 +757,7 @@
                     <div class="carousel-item">
                         <div class="row">
 
-                            <div class="card col-md-2 col-6 ">
+                            <div class="card col-md-2 col-3 ">
                                 <a href="Brand.html">
                                     <img src="images/rounded Image Carousel/brand1.jpg" class="card-img-top mx-auto "
                                         alt="...">
@@ -766,7 +766,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="card col-md-2 col-6">
+                            <div class="card col-md-2 col-3">
                                 <a href="Brand.html">
 
                                     <img src="images/rounded Image Carousel/brand2.jpg" class="card-img-top mx-auto"
@@ -776,7 +776,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="card col-md-2 d-md-inline-flex d-none">
+                            <div class="card col-md-2 col-3">
                                 <a href="Brand.html">
 
                                     <img src="images/rounded Image Carousel/brand3.png" class="card-img-top mx-auto"
@@ -786,7 +786,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="card col-md-2 d-md-inline-flex d-none">
+                            <div class="card col-md-2 col-3">
                                 <a href="Brand.html">
 
                                     <img src="images/rounded Image Carousel/1.png" class="card-img-top mx-auto"
@@ -2293,7 +2293,7 @@
                     <div class="carousel-item active">
                         <div class="row">
 
-                            <div class="card col-md-2 col-6 ">
+                            <div class="card col-md-2 col-3 ">
                                 <a href="Brand.html">
                                     <img src="images/rounded Image Carousel/brand1.jpg" class="card-img-top mx-auto "
                                         alt="...">
@@ -2302,7 +2302,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="card col-md-2 col-6">
+                            <div class="card col-md-2 col-3">
                                 <a href="Brand.html">
 
                                     <img src="images/rounded Image Carousel/brand2.jpg" class="card-img-top mx-auto"
@@ -2312,7 +2312,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="card col-md-2 d-md-inline-flex d-none">
+                            <div class="card col-md-2 col-3">
                                 <a href="Brand.html">
 
                                     <img src="images/rounded Image Carousel/brand3.png" class="card-img-top mx-auto"
@@ -2322,7 +2322,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="card col-md-2 d-md-inline-flex d-none">
+                            <div class="card col-md-2 col-3">
                                 <a href="Brand.html">
 
                                     <img src="images/rounded Image Carousel/1.png" class="card-img-top mx-auto"
@@ -2347,7 +2347,7 @@
                     <div class="carousel-item">
                         <div class="row">
 
-                            <div class="card col-md-2 col-6 ">
+                            <div class="card col-md-2 col-3 ">
                                 <a href="Brand.html">
                                     <img src="images/rounded Image Carousel/brand1.jpg" class="card-img-top mx-auto "
                                         alt="...">
@@ -2356,7 +2356,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="card col-md-2 col-6">
+                            <div class="card col-md-2 col-3">
                                 <a href="Brand.html">
 
                                     <img src="images/rounded Image Carousel/brand2.jpg" class="card-img-top mx-auto"
@@ -2366,7 +2366,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="card col-md-2 d-md-inline-flex d-none">
+                            <div class="card col-md-2 col-3">
                                 <a href="Brand.html">
 
                                     <img src="images/rounded Image Carousel/brand3.png" class="card-img-top mx-auto"
@@ -2376,7 +2376,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="card col-md-2 d-md-inline-flex d-none">
+                            <div class="card col-md-2 col-3">
                                 <a href="Brand.html">
 
                                     <img src="images/rounded Image Carousel/1.png" class="card-img-top mx-auto"
@@ -2401,7 +2401,7 @@
                     <div class="carousel-item">
                         <div class="row">
 
-                            <div class="card col-md-2 col-6 ">
+                            <div class="card col-md-2 col-3 ">
                                 <a href="Brand.html">
                                     <img src="images/rounded Image Carousel/brand1.jpg" class="card-img-top mx-auto "
                                         alt="...">
@@ -2410,7 +2410,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="card col-md-2 col-6">
+                            <div class="card col-md-2 col-3">
                                 <a href="Brand.html">
 
                                     <img src="images/rounded Image Carousel/brand2.jpg" class="card-img-top mx-auto"
@@ -2420,7 +2420,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="card col-md-2 d-md-inline-flex d-none">
+                            <div class="card col-md-2 col-3">
                                 <a href="Brand.html">
 
                                     <img src="images/rounded Image Carousel/brand3.png" class="card-img-top mx-auto"
@@ -2430,7 +2430,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="card col-md-2 d-md-inline-flex d-none">
+                            <div class="card col-md-2 col-3">
                                 <a href="Brand.html">
 
                                     <img src="images/rounded Image Carousel/1.png" class="card-img-top mx-auto"
@@ -3940,7 +3940,7 @@
                 <div class="col-md-4 d-md-inline-block d-none PinkLine">
                 </div>
                 <div class="col-md-2 col-6 PinkSectionTitle text-start text-md-center">
-                    الأجهزة
+                    الأسر المنتجة
                 </div>
                 <div class="col-md-4 d-md-inline-block d-none PinkLine">
                 </div>
