--- a/index.html
+++ b/index.html
@@ -650,7 +650,7 @@
                     <div class="carousel-item active">
                         <div class="row">
 
-                            <div class="card col-md-2 col-3 ">
+                            <div class="card col-md-2 col-6 ">
                                 <a href="Brand.html">
                                     <img src="images/rounded Image Carousel/brand1.jpg" class="card-img-top mx-auto "
                                         alt="...">
@@ -659,7 +659,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="card col-md-2 col-3">
+                            <div class="card col-md-2 col-6">
                                 <a href="Brand.html">
 
                                     <img src="images/rounded Image Carousel/brand2.jpg" class="card-img-top mx-auto"
@@ -669,7 +669,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="card col-md-2 col-3">
+                            <div class="card col-md-2 d-md-inline-flex d-none">
                                 <a href="Brand.html">
 
                                     <img src="images/rounded Image Carousel/brand3.png" class="card-img-top mx-auto"
@@ -679,7 +679,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="card col-md-2 col-3">
+                            <div class="card col-md-2 d-md-inline-flex d-none">
                                 <a href="Brand.html">
 
                                     <img src="images/rounded Image Carousel/1.png" class="card-img-top mx-auto"
@@ -704,7 +704,7 @@
                     <div class="carousel-item">
                         <div class="row">
 
-                            <div class="card col-md-2 col-3 ">
+                            <div class="card col-md-2 col-6 ">
                                 <a href="Brand.html">
                                     <img src="images/rounded Image Carousel/brand1.jpg" class="card-img-top mx-auto "
                                         alt="...">
@@ -713,7 +713,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="card col-md-2 col-3">
+                            <div class="card col-md-2 col-6">
                                 <a href="Brand.html">
 
                                     <img src="images/rounded Image Carousel/brand2.jpg" class="card-img-top mx-auto"
@@ -723,7 +723,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="card col-md-2 col-3">
+                            <div class="card col-md-2 d-md-inline-flex d-none">
                                 <a href="Brand.html">
 
                                     <img src="images/rounded Image Carousel/brand3.png" class="card-img-top mx-auto"
@@ -733,7 +733,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="card col-md-2 col-3">
+                            <div class="card col-md-2 d-md-inline-flex d-none">
                                 <a href="Brand.html">
 
                                     <img src="images/rounded Image Carousel/1.png" class="card-img-top mx-auto"
@@ -758,7 +758,7 @@
                     <div class="carousel-item">
                         <div class="row">
 
-                            <div class="card col-md-2 col-3 ">
+                            <div class="card col-md-2 col-6 ">
                                 <a href="Brand.html">
                                     <img src="images/rounded Image Carousel/brand1.jpg" class="card-img-top mx-auto "
                                         alt="...">
@@ -767,7 +767,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="card col-md-2 col-3">
+                            <div class="card col-md-2 col-6">
                                 <a href="Brand.html">
 
                                     <img src="images/rounded Image Carousel/brand2.jpg" class="card-img-top mx-auto"
@@ -777,7 +777,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="card col-md-2 col-3">
+                            <div class="card col-md-2 d-md-inline-flex d-none">
                                 <a href="Brand.html">
 
                                     <img src="images/rounded Image Carousel/brand3.png" class="card-img-top mx-auto"
@@ -787,7 +787,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="card col-md-2 col-3">
+                            <div class="card col-md-2 d-md-inline-flex d-none">
                                 <a href="Brand.html">
 
                                     <img src="images/rounded Image Carousel/1.png" class="card-img-top mx-auto"
@@ -2294,7 +2294,7 @@
                     <div class="carousel-item active">
                         <div class="row">
 
-                            <div class="card col-md-2 col-3 ">
+                            <div class="card col-md-2 col-6 ">
                                 <a href="Brand.html">
                                     <img src="images/rounded Image Carousel/brand1.jpg" class="card-img-top mx-auto "
                                         alt="...">
@@ -2303,7 +2303,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="card col-md-2 col-3">
+                            <div class="card col-md-2 col-6">
                                 <a href="Brand.html">
 
                                     <img src="images/rounded Image Carousel/brand2.jpg" class="card-img-top mx-auto"
@@ -2313,7 +2313,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="card col-md-2 col-3">
+                            <div class="card col-md-2 d-md-inline-flex d-none">
                                 <a href="Brand.html">
 
                                     <img src="images/rounded Image Carousel/brand3.png" class="card-img-top mx-auto"
@@ -2323,7 +2323,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="card col-md-2 col-3">
+                            <div class="card col-md-2 d-md-inline-flex d-none">
                                 <a href="Brand.html">
 
                                     <img src="images/rounded Image Carousel/1.png" class="card-img-top mx-auto"
@@ -2348,7 +2348,7 @@
                     <div class="carousel-item">
                         <div class="row">
 
-                            <div class="card col-md-2 col-3 ">
+                            <div class="card col-md-2 col-6 ">
                                 <a href="Brand.html">
                                     <img src="images/rounded Image Carousel/brand1.jpg" class="card-img-top mx-auto "
                                         alt="...">
@@ -2357,7 +2357,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="card col-md-2 col-3">
+                            <div class="card col-md-2 col-6">
                                 <a href="Brand.html">
 
                                     <img src="images/rounded Image Carousel/brand2.jpg" class="card-img-top mx-auto"
@@ -2367,7 +2367,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="card col-md-2 col-3">
+                            <div class="card col-md-2 d-md-inline-flex d-none">
                                 <a href="Brand.html">
 
                                     <img src="images/rounded Image Carousel/brand3.png" class="card-img-top mx-auto"
@@ -2377,7 +2377,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="card col-md-2 col-3">
+                            <div class="card col-md-2 d-md-inline-flex d-none">
                                 <a href="Brand.html">
 
                                     <img src="images/rounded Image Carousel/1.png" class="card-img-top mx-auto"
@@ -2402,7 +2402,7 @@
                     <div class="carousel-item">
                         <div class="row">
 
-                            <div class="card col-md-2 col-3 ">
+                            <div class="card col-md-2 col-6 ">
                                 <a href="Brand.html">
                                     <img src="images/rounded Image Carousel/brand1.jpg" class="card-img-top mx-auto "
                                         alt="...">
@@ -2411,7 +2411,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="card col-md-2 col-3">
+                            <div class="card col-md-2 col-6">
                                 <a href="Brand.html">
 
                                     <img src="images/rounded Image Carousel/brand2.jpg" class="card-img-top mx-auto"
@@ -2421,7 +2421,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="card col-md-2 col-3">
+                            <div class="card col-md-2 d-md-inline-flex d-none">
                                 <a href="Brand.html">
 
                                     <img src="images/rounded Image Carousel/brand3.png" class="card-img-top mx-auto"
@@ -2431,7 +2431,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="card col-md-2 col-3">
+                            <div class="card col-md-2 d-md-inline-flex d-none">
                                 <a href="Brand.html">
 
                                     <img src="images/rounded Image Carousel/1.png" class="card-img-top mx-auto"
