--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
                     <img src="images/offer1.jpg" class="d-block w-100" alt="slide 1 ">
                 </div>
                 <div class="carousel-item">
-                    <img src="images/test.webp" class="d-block w-100" alt="slide 2">
+                    <img src="images/offer1.jpg" class="d-block w-100" alt="slide 2">
                 </div>
                 <div class="carousel-item">
                     <img src="images/offer1.jpg" class="d-block w-100" alt="slide 3">
