--- a/index.html
+++ b/index.html
@@ -829,39 +829,22 @@
     <section class="Cards3Part my-5 NoAnim" id="Cards3Part">
         <div class="container-fluid">
 
-            <div class="row d-md-none d-block">
-                <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="./images/3Cards 1.png" alt="" style="width: 100%;">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="./images/3Cards 2.png" alt="" style="width: 100%;">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="./images/3Cards 1.png" alt="" style="width: 100%;">
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="d-md-block d-none">
                 <div class="row ">
-                    <div class="col-4">
+                    <div class="col-md-4 col-12">
                         <div class="Card3">
                             <img src="./images/3Cards 1.png" alt="">
                         </div>
                     </div>
-                    <div class="col-4">
+                    <div class="col-md-4 col-12">
                         <div class="Card3">
                             <img src="./images/3Cards 2.png" alt="">
                         </div>
                     </div>
-                    <div class="col-4">
+                    <div class="col-md-4 col-12">
                         <div class="Card3">
                             <img src="./images/3Cards 1.png" alt="">
                         </div>
                     </div>
-                </div>
             </div>
         </div>
     </section>
@@ -2224,41 +2207,23 @@
     <!-- 3 cards Part 2-->
     <section class="Cards3Part my-5" id="Cards3Part">
         <div class="container-fluid">
-
-            <div class="row d-md-none d-block">
-                <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="./images/3Cards 1.png" alt="" style="width: 100%;">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="./images/3Cards 2.png" alt="" style="width: 100%;">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="./images/3Cards 1.png" alt="" style="width: 100%;">
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="d-md-block d-none">
-                <div class="row ">
-                    <div class="col-4">
+                <div class="row gx-0 gx-md-4">
+                    <div class="col-md-4 col-12">
                         <div class="Card3">
                             <img src="./images/3Cards 1.png" alt="">
                         </div>
                     </div>
-                    <div class="col-4">
+                    <div class="col-md-4 col-6">
                         <div class="Card3">
                             <img src="./images/3Cards 2.png" alt="">
                         </div>
                     </div>
-                    <div class="col-4">
+                    <div class="col-md-4 col-6">
                         <div class="Card3">
                             <img src="./images/3Cards 1.png" alt="">
                         </div>
                     </div>
                 </div>
-            </div>
         </div>
     </section>
 
@@ -3893,43 +3858,29 @@
     <!-- 3 cards Part 4-->
     <section class="Cards3Part my-5" id="Cards3Part4">
         <div class="container-fluid">
-
-            <div class="row d-md-none d-block">
-                <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="./images/3Cards 1.png" alt="" style="width: 100%;">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="./images/3Cards 2.png" alt="" style="width: 100%;">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="./images/3Cards 1.png" alt="" style="width: 100%;">
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="d-md-block d-none">
-                <div class="row ">
-                    <div class="col-4">
+                <div class="row gx-0 gx-md-4">
+                    <div class="col-md-4 col-6">
                         <div class="Card3">
                             <img src="./images/3Cards 1.png" alt="">
                         </div>
                     </div>
-                    <div class="col-4">
+                    <div class="col-md-4 col-6">
                         <div class="Card3">
                             <img src="./images/3Cards 2.png" alt="">
                         </div>
                     </div>
-                    <div class="col-4">
+                    <div class="col-md-4 col-6">
+                        <div class="Card3">
+                            <img src="./images/3Cards 1.png" alt="">
+                        </div>
+                    </div>
+                    <div class="d-md-none d-inline-block col-6">
                         <div class="Card3">
                             <img src="./images/3Cards 1.png" alt="">
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
     </section>
 
     <!-- End 3 cards Part 4-->
